# BreadEngine

./: .gitignore  CMakeLists.txt  CopyMissingAssets.cmake  LICENSE  ReadMe.md  makefile
games/example_game/: CMakeLists.txt  game.cpp  game.h  main.cpp
games/example_game/assets/: README.md  Root.nd  game_config.txt
modules/editor/: CMakeLists.txt  cursorSystem.cpp  cursorSystem.h  editor.cpp  editor.h  editorStyle.cpp  editorStyle.h  gizmoSystem.cpp  gizmoSystem.h  main.cpp  raygui_impl.cpp  raygui_impl.h
modules/editor/assets/styles/: darkred.rgs
modules/editor/commands/: command.cpp  command.h  commandsHandler.cpp  commandsHandler.h
modules/editor/commands/assetsCommands/: deleteAssetCommand.h  moveAssetCommand.cpp  moveAssetCommand.h  renameAssetCommand.cpp  renameAssetCommand.h
modules/editor/commands/inspectorCommands/: addComponentCommand.cpp  addComponentCommand.h  changeInspectorValueCommand.cpp  changeInspectorValueCommand.h  changeNameNodeCommand.cpp  changeNameNodeCommand.h  removeComponentCommand.cpp  removeComponentCommand.h  setActiveNodeCommand.cpp  setActiveNodeCommand.h
modules/editor/commands/mainToolbarCommands/: createNewProjectCommand.h  openProjectCommand.h  reopenLastProjectCommand.h  saveProjectCommand.cpp  saveProjectCommand.h
modules/editor/commands/nodeCommands/: changeNodeTransformCommand.cpp  changeNodeTransformCommand.h  changeParentNodeCommand.cpp  changeParentNodeCommand.h  createNodeCommand.cpp  createNodeCommand.h  destroyNodeCommand.cpp  destroyNodeCommand.h
modules/editor/configs/: editorPrefsConfig.cpp  editorPrefsConfig.h
modules/editor/configs/infrastructure/: baseYamlConfig.cpp  baseYamlConfig.h  configsProvider.cpp  configsProvider.h
modules/editor/editorElements/: customDropdownUiElement.cpp  customDropdownUiElement.h  fileUiElement.cpp  fileUiElement.h  folderUiElement.cpp  folderUiElement.h  messageUiElement.cpp  messageUiElement.h  nodeUiElement.cpp  nodeUiElement.h  renameUiElement.cpp  renameUiElement.h
modules/editor/models/: editorModel.cpp  editorModel.h  reservedFileNames.cpp  reservedFileNames.h  windowsModel.cpp  windowsModel.h
modules/editor/systems/: cameraSystem.cpp  cameraSystem.h  cursorSystem.cpp  gizmoSystem.cpp  gizmoSystem.h  mainToolbarSystem.cpp  mainToolbarSystem.h  restoreSystem.cpp  restoreSystem.h
modules/editor/systems/commands/: command.cpp
modules/editor/uitoolkit/: IUiDraggable.cpp  IUiDraggable.h  IUiOptionsOwner.cpp  IUiOptionsOwner.h  IUiResizable.cpp  IUiResizable.h  UiEmpty.cpp  UiEmpty.h  uiAssetLink.cpp  uiAssetLink.h  uiButton.cpp  uiButton.h  uiCheckBox.cpp  uiCheckBox.h  uiColor.cpp  uiColor.h  uiColorSelector.cpp  uiColorSelector.h  uiComponent.cpp  uiComponent.h  uiContainer.cpp  uiContainer.h  uiDropdown.cpp  uiDropdown.h  uiElement.cpp  uiElement.h  uiEmpty.cpp  uiEmpty.h  uiInspector.cpp  uiInspector.h  uiInteractiveLine.cpp  uiInteractiveLine.h  uiLabel.cpp  uiLabel.h  uiLabelButton.cpp  uiLabelButton.h  uiNodeLink.cpp  uiNodeLink.h  uiNumberBox.cpp  uiNumberBox.h  (+20 more)
modules/editor/utils/: assetsConfigUpdater.cpp  assetsConfigUpdater.h  fileDialogHelper.cpp  fileDialogHelper.h  filesWatcher.cpp  filesWatcher.h
modules/editor/validators/: mandatoryEditorFilesValidator.cpp  mandatoryEditorFilesValidator.h  mandatoryFilesValidator.cpp  mandatoryFilesValidator.h  mandatoryProjectFilesValidator.cpp  mandatoryProjectFilesValidator.h
modules/editor/windows/: assetsWindow.cpp  assetsWindow.h  consoleWindow.cpp  consoleWindow.h  mainWindow.cpp  mainWindow.h  nodeInspectorWindow.cpp  nodeInspectorWindow.h  nodeTreeWindow.cpp  nodeTreeWindow.h  propertyInspectorWindow.cpp  propertyInspectorWindow.h  viewportWindow.cpp  viewportWindow.h
modules/editor/windows/inspectors/: baseInspectorWindow.cpp  baseInspectorWindow.h  nodeInspectorWindow.cpp  nodeInspectorWindow.h
modules/editor/windows/mainWindow/: assetsWindow.cpp  assetsWindow.h  consoleWindow.cpp  consoleWindow.h  mainWindow.cpp  mainWindow.h  nodeInspector.cpp  nodeInspector.h  nodeInspectorWindow.cpp  nodeInspectorWindow.h  nodeInstance.h  (+9 more)
modules/engine/: CMakeLists.txt  action.h  component.cpp  component.h  engine.cpp  engine.h  iDisposable.h  inspectorObject.cpp  inspectorObject.h  logger.cpp  logger.h  moduleLoader.cpp  moduleLoader.h  nameof.h  node.cpp  node.h  nodeNotificator.cpp  nodeNotificator.h  nodeProvider.cpp  nodeProvider.h  nodeYaml.h  objectPool.h  property.cpp  property.h  stacktrace.cpp  stacktrace.h
modules/engine/component/: baseComponentChunk.cpp  baseComponentChunk.h  camera.cpp  camera.h  cameraDirector.cpp  cameraDirector.h  component.cpp  component.h  componentChunk.cpp  componentChunk.h  componentInternal.h  componentRegistry.cpp  componentRegistry.h  componentStack.cpp  componentStack.h  componentsProvider.cpp  componentsProvider.h  lerpPosition.cpp  lerpPosition.h  light.cpp  light.h  meshRenderer.cpp  meshRenderer.h  spriteRenderer.cpp  spriteRenderer.h  transform.cpp  transform.h
modules/engine/configs/: asset.cpp  asset.h  assetsConfig.cpp  assetsConfig.h  assetsConfigYaml.h  assetsDeserializer.cpp  baseYamlConfig.cpp  baseYamlConfig.h  file.h  folder.cpp  folder.h  meshAsset.cpp  meshAsset.h  projectSettings.cpp  projectSettings.h  textureAsset.cpp  textureAsset.h
modules/engine/data/: color.cpp  color.h  lightSettings.cpp  lightSettings.h  material.cpp  material.h
modules/engine/models/: reservedFileNames.cpp  reservedFileNames.h
modules/engine/systems/: cameraDirectorSystem.cpp  cameraDirectorSystem.h  cameraSystem.cpp  cameraSystem.h  fileSystem.cpp  fileSystem.h  globalLightSystem.cpp  globalLightSystem.h  lerpPositionSystem.cpp  lerpPositionSystem.h  lightSystem.cpp  lightSystem.h  meshRendererSystem.cpp  meshRendererSystem.h  nodeSystem.cpp  nodeSystem.h  resetChangedFromEditorSystem.cpp  resetChangedFromEditorSystem.h  spriteRendererSystem.cpp  spriteRendererSystem.h
modules/engine/ui/: ui_manager.cpp  ui_manager.h
modules/engine/utils/: colorUtils.cpp  colorUtils.h
modules/engine/validators/: mandatoryProjectFilesValidator.cpp  mandatoryProjectFilesValidator.h
(+191 files in other folders)
